# Regression-and-Curve-Fitting

./: .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
Chapter 5 Curve Fitting and Regression/: LeastSquareRegression.m  LinearizationData.xlsx  LinearizationTransform.m  PolyFit.m  PolyRegressData.xlsx  PolynomialRegression.m  Sort_DataFile.xlsx  legrangeCurveFit.m
include/CurveFitting/: LeastSquareRegression.h
scripts/: example.cpp
src/CurveFitting/: LeastSquareRegression.cpp
